Fix Scrolling and Mark Read items
- Remove Endless Scroll
- Implement jQuery's scrollTop() to check for scrollable content
- remove next and prev keybinds, they never worked
- Mark content that scrolls out of screen as read
- Update Readme

--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -53,9 +53,8 @@ img {
 #spinner {
     display: none;
     position: fixed;
-    float: left;
-    right: 5px;
-    top: 5px;
+    right: 20px;
+    bottom: 20px;
 }
 .endless_scroll_loader { 
     position: fixed; 
